printers: Make the dialogs independent of the PpPrinterEntry lifetime

https://bugzilla.gnome.org/show_bug.cgi?id=779846